--- a/index.html
+++ b/index.html
@@ -1,225 +1,234 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <center>
-      <div id="div_start">
-        <button
-          id="start_button"
-          onclick="startButton(event)"
-          style="display: inline-block;"
-        >
-          <img
-            alt="Start"
-            style="width: 60px; height: 60px;"
-            id="start_img"
-            src="mic.jpg"
-          />
-        </button>
-      </div>
-      <br />
-      <div class="browser-landing" id="main">
-        <div class="compact marquee">
-          <div id="info" style="visibility: hidden;">
-            <p
-              style="font-family: cambria; font-size: 21px; display: none;"
-              id="info_start"
-            >
-              Click on the microphone icon and begin speaking for as long as you
-              like. <br /><br />
-            </p>
-            <p
-              style="font-family: cambria; font-size: 21px; display: inline;"
-              id="info_speak_now"
-            >
-              నీ మాట కోసం...<br /><br />
-            </p>
-            <p id="info_no_speech" style="display: none;">
-              No speech was detected. You may need to adjust your microphone
-              settings.
-            </p>
-            <p id="info_no_microphone" style="display: none;">
-              No microphone was found. Ensure that a microphone is installed and
-              that microphone settings are configured correctly.
-            </p>
-            <p id="info_allow" style="display: none;">
-              Click the "Allow" button above to enable your microphone.
-            </p>
-            <p id="info_denied" style="display: none;">
-              Permission to use microphone was denied.
-            </p>
-            <p id="info_blocked" style="display: none;">
-              Permission to use microphone is blocked. To change, go to
-              chrome://settings/contentExceptions#media-stream
-            </p>
-            <p id="info_upgrade" style="display: none;">
-              Speech Recognition is not supported by this browser. Upgrade to
-              <a href="//www.google.com/chrome" target="_blank">Chrome</a>
-              version 25 or later.
-            </p>
-          </div>
 
-          <div id="results" oncanplaythrough="playf();">
-            <span
-              class="final"
-              id="final_span"
-              name="final_span"
-              style="font-size: 48px;"
-            ></span>
-            <span
-              class="interim"
-              id="interim_span"
-              style="font-size: 24px;"
-            ></span>
-          </div>
-          <br />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<body>
+  <center>
+    <div id="div_start">
+      <button id="start_button" onclick="startButton(event)" style="display: inline-block;">
+        <img alt="Start" style="width: 60px; height: 60px;" id="start_img" src="mic.jpg" />
+      </button>
+    </div>
+    <br />
+    <div class="browser-landing" id="main">
+      <div class="compact marquee">
+        <div id="info" style="visibility: hidden;">
+          <p style="font-family: cambria; font-size: 21px; display: none;" id="info_start">
+            Click on the microphone icon and begin speaking for as long as you
+            like. <br /><br />
+          </p>
+          <p style="font-family: cambria; font-size: 21px; display: inline;" id="info_speak_now">
+            ఏ జంతువు కావాలి...?<br /><br />
+          </p>
+          <p id="info_no_speech" style="display: none;">
+            No speech was detected. You may need to adjust your microphone
+            settings.
+          </p>
+          <p id="info_no_microphone" style="display: none;">
+            No microphone was found. Ensure that a microphone is installed and
+            that microphone settings are configured correctly.
+          </p>
+          <p id="info_allow" style="display: none;">
+            Click the "Allow" button above to enable your microphone.
+          </p>
+          <p id="info_denied" style="display: none;">
+            Permission to use microphone was denied.
+          </p>
+          <p id="info_blocked" style="display: none;">
+            Permission to use microphone is blocked. To change, go to
+            chrome://settings/contentExceptions#media-stream
+          </p>
+          <p id="info_upgrade" style="display: none;">
+            Speech Recognition is not supported by this browser. Upgrade to
+            <a href="//www.google.com/chrome" target="_blank">Chrome</a>
+            version 25 or later.
+          </p>
         </div>
+
+        <div id="results" oncanplaythrough="playf();">
+          <img id='img_search' src="assets/kukkapilla.jpg" width="640" height="480"> <br>
+          <span class="final" id="final_span" name="final_span" style="font-size: 48px;"></span>
+          <span class="interim" id="interim_span" style="font-size: 24px;"></span>
+        </div>
+        <br />
       </div>
-    </center>
-    <script>
-      var final_transcript = "";
-      var recognizing = false;
-      var ignore_onend;
-      var start_timestamp;
-      if (!("webkitSpeechRecognition" in window)) {
-        upgrade();
-      } else {
-        start_button.style.display = "inline-block";
-        var recognition = new webkitSpeechRecognition();
-        recognition.continuous = true;
-        recognition.interimResults = true;
+    </div>
+  </center>
+  <script>
+    var final_transcript = "";
+    var recognizing = false;
+    var ignore_onend;
+    var start_timestamp;
+    if (!("webkitSpeechRecognition" in window)) {
+      upgrade();
+    } else {
+      start_button.style.display = "inline-block";
+      var recognition = new webkitSpeechRecognition();
+      recognition.continuous = true;
+      recognition.interimResults = true;
 
-        recognition.onstart = function () {
-          recognizing = true;
-          showInfo("info_speak_now");
-          start_img.src = "mic-on.jpg";
-        };
+      recognition.onstart = function () {
+        recognizing = true;
+        showInfo("info_speak_now");
+        start_img.src = "mic-on.jpg";
+      };
 
-        recognition.onerror = function (event) {
-          if (event.error == "no-speech") {
-            start_img.src = "mic.jpg";
-            showInfo("info_no_speech");
-            ignore_onend = true;
-          }
-          if (event.error == "audio-capture") {
-            start_img.src = "mic.jpg";
-            showInfo("info_no_microphone");
-            ignore_onend = true;
-          }
-          if (event.error == "not-allowed") {
-            if (event.timeStamp - start_timestamp < 100) {
-              showInfo("info_blocked");
-            } else {
-              showInfo("info_denied");
-            }
-            ignore_onend = true;
-          }
-        };
-
-        recognition.onend = function () {
-          recognizing = false;
-          if (ignore_onend) {
-            return;
-          }
+      recognition.onerror = function (event) {
+        if (event.error == "no-speech") {
           start_img.src = "mic.jpg";
-          if (!final_transcript) {
-            showInfo("info_start");
-            return;
-          }
-          showInfo("");
-          if (window.getSelection) {
-            window.getSelection().removeAllRanges();
-            var range = document.createRange();
-            range.selectNode(document.getElementById("final_span"));
-            window.getSelection().addRange(range);
-          }
-        };
-
-        recognition.onresult = function (event) {
-          var interim_transcript = "";
-          if (typeof event.results == "undefined") {
-            recognition.onend = null;
-            recognition.stop();
-            upgrade();
-            return;
-          }
-          for (var i = event.resultIndex; i < event.results.length; ++i) {
-            if (event.results[i].isFinal) {
-              final_transcript += event.results[i][0].transcript;
-            } else {
-              interim_transcript += event.results[i][0].transcript;
-            }
-          }
-          final_transcript = capitalize(final_transcript);
-          final_span.innerHTML = linebreak(final_transcript);
-          interim_span.innerHTML = linebreak(interim_transcript);
-          // if (final_transcript || interim_transcript) {
-          //   showButtons("inline-block");
-          // }
-        };
-      }
-
-      function upgrade() {
-        start_button.style.visibility = "hidden";
-        alert("upgrade");
-        showInfo("info_upgrade");
-      }
-
-      var two_line = /\n\n/g;
-      var one_line = /\n/g;
-      function linebreak(s) {
-        return s.replace(two_line, "<p></p>").replace(one_line, "<br>");
-      }
-
-      var first_char = /\S/;
-      function capitalize(s) {
-        return s.replace(first_char, function (m) {
-          return m.toUpperCase();
-        });
-      }
-
-      function copyButton() {
-        if (recognizing) {
-          recognizing = false;
-          recognition.stop();
+          showInfo("info_no_speech");
+          ignore_onend = true;
         }
-        copy_info.style.display = "inline-block";
-        showInfo("");
-      }
+        if (event.error == "audio-capture") {
+          start_img.src = "mic.jpg";
+          showInfo("info_no_microphone");
+          ignore_onend = true;
+        }
+        if (event.error == "not-allowed") {
+          if (event.timeStamp - start_timestamp < 100) {
+            showInfo("info_blocked");
+          } else {
+            showInfo("info_denied");
+          }
+          ignore_onend = true;
+        }
+      };
 
-      function startButton(event) {
-        if (recognizing) {
-          recognition.stop();
+      recognition.onend = function () {
+        recognizing = false;
+        if (ignore_onend) {
           return;
         }
-        // final_transcript = ""; temp keep adding
-        recognition.lang = "te-IN"; // select_dialect.value;
-        recognition.start();
-        ignore_onend = false;
-        final_span.innerHTML = "";
-        interim_span.innerHTML = "";
-        start_img.src = "mic-off.jpg";
-        showInfo("info_allow");
-        // showButtons("none");
-        start_timestamp = event.timeStamp;
-      }
-
-      function showInfo(s) {
-        if (s) {
-          for (var child = info.firstChild; child; child = child.nextSibling) {
-            if (child.style) {
-              child.style.display = child.id == s ? "inline" : "none";
-            }
-          }
-          info.style.visibility = "visible";
-        } else {
-          info.style.visibility = "hidden";
+        start_img.src = "mic.jpg";
+        if (!final_transcript) {
+          showInfo("info_start");
+          return;
         }
+        showInfo("");
+        if (window.getSelection) {
+          window.getSelection().removeAllRanges();
+          var range = document.createRange();
+          range.selectNode(document.getElementById("final_span"));
+          window.getSelection().addRange(range);
+        }
+      };
+
+      recognition.onresult = function (event) {
+        var interim_transcript = "";
+        if (typeof event.results == "undefined") {
+          recognition.onend = null;
+          recognition.stop();
+          upgrade();
+          return;
+        }
+        final_transcript = "";
+        // interim_transcript = "";
+        for (var i = event.resultIndex; i < event.results.length; ++i) {
+          if (event.results[i].isFinal) {
+            final_transcript += event.results[i][0].transcript;
+          } else {
+            interim_transcript += event.results[i][0].transcript;
+          }
+        }
+        final_transcript = capitalize(final_transcript);
+        final_span.innerHTML = linebreak(final_transcript);
+        interim_span.innerHTML = linebreak(interim_transcript);
+        var images_map = {
+          "పిల్లి": "pilli.jpg",
+          "మేక": "meka.jpg",
+          "కుక్క పిల్ల": "kukkapilla.jpg",
+          "కుక్క": "kukka.jpg",
+          "ఆవు": "aavu.jpg",
+          "కోతి": "kothi.jpg",
+          "కోడి": "kodi.jpg",
+          "పంది": "pandi.jpg",
+          "గుర్రం": "gurram.jpg",
+          "ఏనుగు": "enugu.jpg",
+          "కాకి": "kaki.jpg"
+        };
+        // Ganishka queries:
+        // meka pillalu
+        // inko meka choopinchu
+        console.log(final_transcript)
+        search_image_key = final_transcript.trim()
+        if (images_map[search_image_key] != undefined) {
+          document.getElementById('img_search').src = "assets/" + images_map[search_image_key]
+          console.log(images_map[search_image_key])
+          document.getElementById('img_search').hidden = false
+        } else {
+          document.getElementById('img_search').hidden = true
+        }
+        // if (final_transcript || interim_transcript) {
+        //   showButtons("inline-block");
+        // }
+      };
+    }
+
+    function upgrade() {
+      start_button.style.visibility = "hidden";
+      alert("upgrade");
+      showInfo("info_upgrade");
+    }
+
+    var two_line = /\n\n/g;
+    var one_line = /\n/g;
+
+    function linebreak(s) {
+      return s.replace(two_line, "<p></p>").replace(one_line, "<br>");
+    }
+
+    var first_char = /\S/;
+
+    function capitalize(s) {
+      return s.replace(first_char, function (m) {
+        return m.toUpperCase();
+      });
+    }
+
+    function copyButton() {
+      if (recognizing) {
+        recognizing = false;
+        recognition.stop();
       }
-    </script>
-  </body>
+      copy_info.style.display = "inline-block";
+      showInfo("");
+    }
+
+    function startButton(event) {
+      if (recognizing) {
+        recognition.stop();
+        return;
+      }
+      final_transcript = ""; //temp keep adding
+      recognition.lang = "te-IN"; // select_dialect.value;
+      recognition.start();
+      ignore_onend = false;
+      final_span.innerHTML = "";
+      interim_span.innerHTML = "";
+      start_img.src = "mic-off.jpg";
+      showInfo("info_allow");
+      // showButtons("none");
+      start_timestamp = event.timeStamp;
+    }
+
+    function showInfo(s) {
+      if (s) {
+        for (var child = info.firstChild; child; child = child.nextSibling) {
+          if (child.style) {
+            child.style.display = child.id == s ? "inline" : "none";
+          }
+        }
+        info.style.visibility = "visible";
+      } else {
+        info.style.visibility = "hidden";
+      }
+    }
+  </script>
+</body>
+
 </html>
